[package]
name = "silent-whistle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
silent-whistle-core = { path = "silent-whistle-core" }
# silent-whistle-risc0 = { path = "silent-whistle-risc0" }

candid = "0.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic_principal = "0.1.1"
risc0-zkvm = { version = "1.1.2", features = ["prove"] }
serde = { version = "1.0.213", features = ["derive"] }
tracing-subscriber = "0.3.18"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
