[package]
name = "silent-whistle-icp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic_principal = "0.1.1"
risc0-zkvm = { version = "1.1.2", features = ["prove"] }
serde = { version = "1.0.213", features = ["derive"] }
tracing-subscriber = "0.3.18"
silent-whistle-core = { path = "../silent-whistle-core" }
